-Adds code to TaskDetailFragment.kt and TaskDetailViewModel.kt -Updates register screen and login screen xml code

--- a/app/src/main/res/layout/cv_text_field_email.xml
+++ b/app/src/main/res/layout/cv_text_field_email.xml
@@ -9,45 +9,46 @@
     android:background="@drawable/bg_rounded_edit_text"
     android:backgroundTint="@color/light_2">
 
-<androidx.constraintlayout.widget.Guideline
-    android:id="@+id/startOfEditText"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:layout_constraintGuide_percent=".061" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/startOfEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".061" />
 
-<androidx.constraintlayout.widget.Guideline
-    android:id="@+id/endOfEditText"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:layout_constraintGuide_percent=".86" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/endOfEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".86" />
 
-<EditText
-    android:id="@+id/emailAddressEditText"
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:background="@null"
-    android:hint="@string/email_address_preview"
-    android:singleLine="true"
-    android:textAlignment="viewStart"
-    android:textCursorDrawable="@null"
-    app:layout_constraintStart_toEndOf="@id/startOfEditText"
-    app:layout_constraintEnd_toStartOf="@id/endOfEditText"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent">
-</EditText>
+    <EditText
+        android:id="@+id/emailAddressEditText"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:hint="@string/email_address_preview"
+        android:textSize="16sp"
+        android:textColor="#A1A4B2"
+        android:singleLine="true"
+        android:textAlignment="viewStart"
+        android:textCursorDrawable="@null"
+        app:layout_constraintStart_toEndOf="@id/startOfEditText"
+        app:layout_constraintEnd_toStartOf="@id/endOfEditText"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </EditText>
 
-<ImageView
-    android:id="@+id/emailAddressCheckBox"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/ic_baseline_check_24"
-    android:visibility="invisible"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toEndOf="@id/endOfEditText"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent">
-
-</ImageView>
+    <ImageView
+        android:id="@+id/emailAddressCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_baseline_check_24"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/endOfEditText"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </ImageView>
 </androidx.constraintlayout.widget.ConstraintLayout>
