--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -89,8 +89,8 @@
                 <include
                     layout="@layout/cv_line_border_between_views" />
                 <include
-                    android:id="@+id/btm_action_tv_btn"
-                    layout= "@layout/cv_agenda_item_screen_btm_action_tv_btn" />
+                    android:id="@+id/delete_btn"
+                    layout= "@layout/cv_agenda_item_delete_btn" />
                 <include
                     layout="@layout/cv_empty_divider"
                     android:layout_width="match_parent"
