--- a/app/src/main/res/layout/dialog_add_attendee.xml
+++ b/app/src/main/res/layout/dialog_add_attendee.xml
@@ -37,7 +37,7 @@
                 app:layout_constraintEnd_toEndOf="parent">
             </TextView>
 
-            <com.andrew.tasky.presentation.views.EmailTextField
+            <com.andrew.tasky.auth.presentation.views.EmailTextField
                 android:id="@+id/emailTextField"
                 android:layout_width="match_parent"
                 android:layout_height="63dp"
@@ -45,7 +45,7 @@
                 android:layout_marginEnd="20dp"
                 app:layout_constraintTop_toBottomOf="@id/addVisitorTV"
                 app:layout_constraintBottom_toTopOf="@id/addVisitorButton">
-            </com.andrew.tasky.presentation.views.EmailTextField>
+            </com.andrew.tasky.auth.presentation.views.EmailTextField>
 
             <Button
                 android:id="@+id/addVisitorButton"
