--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,7 +31,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.andrew.tasky.presentation.views.EmailTextField
+        <com.andrew.tasky.auth.presentation.views.EmailTextField
             android:id="@+id/emailTextField"
             android:layout_width="0dp"
             android:layout_height="63dp"
@@ -41,9 +41,9 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
-        </com.andrew.tasky.presentation.views.EmailTextField>
+        </com.andrew.tasky.auth.presentation.views.EmailTextField>
 
-        <com.andrew.tasky.presentation.views.PasswordTextField
+        <com.andrew.tasky.auth.presentation.views.PasswordTextField
             android:id="@+id/passwordTextField"
             android:layout_width="0dp"
             android:layout_height="63dp"
@@ -53,7 +53,7 @@
             app:layout_constraintTop_toBottomOf="@+id/emailTextField"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
-        </com.andrew.tasky.presentation.views.PasswordTextField>
+        </com.andrew.tasky.auth.presentation.views.PasswordTextField>
 
         <Button
             android:id="@+id/loginButton"
