-Starting to build api connectivity for authentication -Made multiple date types interface

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -22,6 +22,9 @@
         android:name="com.andrew.tasky.auth.presentation.screens.register.RegisterFragment"
         android:label="fragment_register"
         tools:layout="@layout/fragment_register" >
+        <action
+            android:id="@+id/action_registerFragment_to_agendaFragment"
+            app:destination="@id/agendaFragment" />
     </fragment>
     <fragment
         android:id="@+id/agendaFragment"
